changed README.md a little
