# src/docs/swagger.json
@@ -179,9 +179,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "SWIFT entity",
+                        "description": "SWIFT headquarter entity",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/REST.HeadquarterResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "No country found",
+                        "schema": {
+                            "$ref": "#/definitions/REST.MessageResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/REST.MessageResponse"
                         }
                     }
                 }
@@ -303,11 +315,77 @@
                 }
             }
         },
+        "REST.HeadquarterResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "bankName": {
+                    "type": "string"
+                },
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/structs.ReqBranch"
+                    }
+                },
+                "countryISO2": {
+                    "type": "string"
+                },
+                "countryName": {
+                    "type": "string"
+                },
+                "isHeadquarter": {
+                    "type": "boolean"
+                },
+                "swiftCode": {
+                    "type": "string"
+                }
+            }
+        },
         "REST.MessageResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "structs.ReqBranch": {
+            "type": "object",
+            "required": [
+                "bankName",
+                "countryISO2",
+                "countryName",
+                "isHeadquarter",
+                "swiftCode"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "bankName": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "countryISO2": {
+                    "type": "string",
+                    "maxLength": 2,
+                    "minLength": 2
+                },
+                "countryName": {
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "isHeadquarter": {
+                    "type": "boolean"
+                },
+                "swiftCode": {
+                    "type": "string",
+                    "maxLength": 11,
+                    "minLength": 11
                 }
             }
         },
